padding in default navbar (prevent overlap) - 2

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1624,5 +1624,5 @@ img:hover+.post-tag {
 /* Navbar Padding */
 
 body {
-    padding-top: 70px; /* Adjust on basis height of navbar - might take many trialss */
+    padding-top: 50px; /* Adjust on basis height of navbar - might take many trialss */
 }
